datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

generator client {
  provider = "prisma-client-js"
  // previewFeatures = []
}

generator dbml {
  provider = "prisma-dbml-generator"
}

model User {
  id                String             @id @default(cuid())
  createdAt         DateTime           @default(now())
  updatedAt         DateTime           @updatedAt
  email             String             @unique
  password          String
  firstname         String?
  lastname          String?
  posts             Post[]
  role              Role
  verifyEmailTokens VerifyEmailToken[]
  emailVerified     DateTime?
  image             String?
  bookmarks         Bookmark[]
  interactions      Interaction[]
}

model Post {
  id           String        @id @default(cuid())
  createdAt    DateTime      @default(now())
  updatedAt    DateTime      @updatedAt
  published    Boolean
  title        String
  content      String?
  author       User?         @relation(fields: [authorId], references: [id])
  authorId     String?
  status       Status        @default(INACTIVE)
  bookmarks    Bookmark[]
  interactions Interaction[]
}

enum Role {
  ADMIN
  USER
}

enum Status {
  PENDING
  ACTIVE
  INACTIVE
}

model VerifyEmailToken {
  id        String   @id @default(uuid())
  token     String   @unique
  userId    String
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  createdAt DateTime @default(now())
  expiresAt DateTime
}

model Bookmark {
  id        String   @id @default(cuid())
  user      User     @relation(fields: [userId], references: [id])
  userId    String
  post      Post     @relation(fields: [postId], references: [id])
  postId    String

  @@unique([userId, postId])
}

model Interaction {
  id        String          @id @default(cuid())
  type      InteractionType
  user      User            @relation(fields: [userId], references: [id])
  userId    String
  post      Post            @relation(fields: [postId], references: [id])
  postId    String

  @@unique([userId, postId, type])
}

enum InteractionType {
  HEART
}
