//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  email String [unique, not null]
  password String [not null]
  firstname String
  lastname String
  posts Post [not null]
  role Role [not null]
  verifyEmailTokens VerifyEmailToken [not null]
  emailVerified DateTime
  image String
  bookmarks Bookmark [not null]
  interactions Interaction [not null]
}

Table Post {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  published Boolean [not null]
  title String [not null]
  content String
  author User
  authorId String
  status Status [not null, default: 'INACTIVE']
  bookmarks Bookmark [not null]
  interactions Interaction [not null]
}

Table VerifyEmailToken {
  id String [pk]
  token String [unique, not null]
  userId String [not null]
  user User [not null]
  createdAt DateTime [default: `now()`, not null]
  expiresAt DateTime [not null]
}

Table Bookmark {
  id String [pk]
  user User [not null]
  userId String [not null]
  post Post [not null]
  postId String [not null]

  indexes {
    (userId, postId) [unique]
  }
}

Table Interaction {
  id String [pk]
  type InteractionType [not null]
  user User [not null]
  userId String [not null]
  post Post [not null]
  postId String [not null]

  indexes {
    (userId, postId, type) [unique]
  }
}

Enum Role {
  ADMIN
  USER
}

Enum Status {
  PENDING
  ACTIVE
  INACTIVE
}

Enum InteractionType {
  HEART
}

Ref: Post.authorId > User.id

Ref: VerifyEmailToken.userId > User.id [delete: Cascade]

Ref: Bookmark.userId > User.id

Ref: Bookmark.postId > Post.id

Ref: Interaction.userId > User.id

Ref: Interaction.postId > Post.id